--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="container">
         <!-- Image Container -->
         <div class="image-container">
-            <img src="Screenshot 2024-08-22 230115.png" alt="Fitness Image">
+              <img src="2024-08-22 230115.png" alt="Fitness Image">                        
         </div>
         <!-- Background Container -->
         <div class="background-container">
