--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="container">
         <!-- Image Container -->
         <div class="image-container">
-              <img src="2024-08-22 230115.png" alt="Fitness Image">                        
+            <img src="2024-08-22 230115.png" alt="Fitness Image">
         </div>
         <!-- Background Container -->
         <div class="background-container">
@@ -149,7 +149,7 @@
             </h1>
             <!-- Ultimate Influencer Text -->
             <h2 class="ultimate-influencer">
-                Presenting #FitnessKaUltimateInfluencer
+                Presenting Fitness Ka Ultimate Influencer
             </h2>
         </div>
     </div>
